feat: add value prop access button on the course dashboard screen
LEARNER-8623

--- a/OpenEdXMobile/res/values/text_styles.xml
+++ b/OpenEdXMobile/res/values/text_styles.xml
@@ -166,9 +166,22 @@
         <item name="android:ellipsize">end</item>
     </style>
 
+    <style name="course_outline_card_title" parent="@style/bold_edx_black_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/edx_large</item>
+        <item name="lineHeight">@dimen/widget_margin_x_double</item>
+        <item name="android:gravity">top</item>
+    </style>
+
     <style name="course_card_course_run" parent="@style/regular_neutral_xx_dark_text">
         <item name="android:singleLine">true</item>
         <item name="android:textSize">@dimen/edx_x_small</item>
+    </style>
+
+    <style name="course_outline_card_course_run" parent="@style/regular_neutral_xx_dark_text">
+        <item name="android:textSize">@dimen/edx_x_small</item>
+        <item name="lineHeight">@dimen/widget_margin_double</item>
     </style>
 
     <style name="edX.TextAppearance.Switch" parent="@style/semibold_text">
