--- a/OpenEdXMobile/res/layout/row_course_card.xml
+++ b/OpenEdXMobile/res/layout/row_course_card.xml
@@ -1,76 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/course_card_height"
-    tools:showIn="@layout/fragment_course_dashboard">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/header_image_view"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@null"
-        android:scaleType="fitXY"
-        tools:src="@drawable/placeholder_course_card_image" />
+        android:layout_height="wrap_content"
+        tools:showIn="@layout/fragment_course_dashboard">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/header_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@null"
+            android:scaleType="fitXY"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/placeholder_course_card_image" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/header_play_icon"
+            android:layout_width="@dimen/course_card_play_icon_size"
+            android:layout_height="@dimen/course_card_play_icon_size"
+            android:layout_gravity="center"
+            android:clickable="false"
+            android:contentDescription="@string/go_to_video"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:scaleType="fitXY"
+            android:visibility="gone"
+            app:srcCompat="@drawable/ic_media_play_inactive"
+            app:tint="@color/black"
+            tools:visibility="visible" />
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
         android:background="@color/transparent_white_85"
-        android:minHeight="@dimen/course_detail_card_height"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/edx_default_margin"
+        android:paddingTop="@dimen/edx_half_margin"
+        android:paddingRight="@dimen/edx_default_margin"
+        android:paddingBottom="@dimen/edx_default_margin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/header_image_view">
 
-        <LinearLayout
-            android:layout_width="0dp"
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/course_detail_name"
+            style="@style/course_outline_card_title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="@dimen/widget_margin">
+            tools:text="Programming for Data Science" />
 
-            <TextView
-                android:id="@+id/course_detail_name"
-                style="@style/course_card_title"
-                tools:text="Course Name" />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/course_detail_extras"
+            style="@style/course_outline_card_course_run"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Course access expires on May 28" />
 
-            <TextView
-                android:id="@+id/course_detail_extras"
-                style="@style/course_card_course_run"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="XX | xx | xxxxx" />
-        </LinearLayout>
-
-        <ImageButton
-            android:id="@+id/course_detail_share"
-            android:layout_width="@dimen/course_detail_share_icon_size"
-            android:layout_height="@dimen/course_detail_share_icon_size"
-            android:layout_gravity="bottom|end"
-            android:background="@null"
-            android:contentDescription="@string/share_course_button"
-            android:padding="@dimen/edx_margin"
-            android:scaleType="fitCenter"
-            android:visibility="invisible"
-            app:srcCompat="@drawable/ic_share"
-            app:tint="@color/black"
+        <include
+            android:id="@+id/layout_upgrade_btn"
+            layout="@layout/layout_upgrade_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/edx_default_margin"
+            android:visibility="gone"
             tools:visibility="visible" />
     </LinearLayout>
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/header_play_icon"
-        android:layout_width="@dimen/course_card_play_icon_size"
-        android:layout_height="@dimen/course_card_play_icon_size"
-        android:layout_gravity="center"
-        android:clickable="false"
-        android:contentDescription="@string/go_to_video"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:scaleType="fitXY"
-        android:visibility="invisible"
-        app:srcCompat="@drawable/ic_media_play_inactive"
-        app:tint="@color/black"
-        tools:visibility="visible" />
-
-</FrameLayout>
+</LinearLayout>
