--- a/OpenEdXMobile/res/layout/dialog_upgrade_features.xml
+++ b/OpenEdXMobile/res/layout/dialog_upgrade_features.xml
@@ -47,10 +47,19 @@
                 android:layout_height="0dp"
                 android:layout_weight="1" />
 
-            <include
-                android:id="@+id/layout_upgrade_btn"
-                layout="@layout/layout_upgrade_btn" />
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/shimmer_view_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:shimmer_base_color="@color/neutralXLight"
+                app:shimmer_colored="true"
+                app:shimmer_highlight_color="@color/neutralLight">
 
+                <include
+                    android:id="@+id/layout_upgrade_btn"
+                    layout="@layout/layout_upgrade_btn" />
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
         </LinearLayout>
     </ScrollView>
 </layout>
