--- a/OpenEdXMobile/res/values-ar/course_modal_strings.xml
+++ b/OpenEdXMobile/res/values-ar/course_modal_strings.xml
@@ -9,7 +9,7 @@
     <string name="course_modal_unlock_access">افتح الوصول إلى جميع أنشطة المقرر الدراسي ، بما في ذلك الواجبات المقدرة</string>
     <string name="course_modal_full_access_course">الوصول الكامل إلى محتوى الدورة ومواد الدورة التدريبية حتى بعد انتهاء الدورة</string>
     <!-- Label Course Upgrade button  -->
-    <string name="label_upgrade_course_button">قم بالتحديث  الآن مقابل 99 دولارًا</string>
+    <string name="label_upgrade_course_button">قم بالتحديث  الآن مقابل {price}</string>
     <!-- Title Course Locked Modal  -->
     <string name="course_locked_modal_title">تعرف على المزيد حول الميزات المقفلة</string>
     <!-- Label Course Modal Unlock Graded Assignments -->
