--- a/OpenEdXMobile/res/values-tr/course_modal_strings.xml
+++ b/OpenEdXMobile/res/values-tr/course_modal_strings.xml
@@ -9,7 +9,7 @@
     <string name="course_modal_unlock_access">Notlu ödevler dahil olmak üzere tüm kurs aktivitelerine erişimin kilidini açın</string>
     <string name="course_modal_full_access_course">Kurs bittikten sonra dahi kurs içeriklerine ve kurs materyaline tam erişim</string>
     <!-- Label Course Upgrade button  -->
-    <string name="label_upgrade_course_button">99$ karşılığında hemen yükseltin</string>
+    <string name="label_upgrade_course_button">{price} karşılığında hemen yükseltin</string>
     <!-- Title Course Locked Modal  -->
     <string name="course_locked_modal_title">Kilitli özellikler hakkında daha fazlasını öğrenin</string>
     <!-- Label Course Modal Unlock Graded Assignments -->
