--- a/OpenEdXMobile/res/values/iap_strings.xml
+++ b/OpenEdXMobile/res/values/iap_strings.xml
@@ -13,9 +13,23 @@
     <!-- Title of Course Upgrade Error Alert -->
     <string name="title_upgrade_error">Upgrade Error</string>
     <!-- Message for course upgrade error -->
-    <string name="upgrade_error_message">It looks like something went wrong when upgrading your course.</string>
+    <string name="general_error_message">It looks like something went wrong when upgrading your course. If this error continues, please contact Support.</string>
     <!-- Email Subject for Course Upgrade Error -->
     <string name="email_subject_upgrade_error">Error upgrading course in app</string>
     <!-- Get Help button label -->
     <string name="label_get_help">Get Help</string>
+
+    <!--  Error Messages  -->
+    <!--  Course didn't found against the course sku in the course upgrade API -->
+    <string name="error_course_not_found">The course you are looking to upgrade could not be found. Please try your upgrade again. If this error continues, contact Support.</string>
+    <!-- Authentication error in course upgrade API's basket, checkout, execute  -->
+    <string name="error_user_not_authenticated">Your account could not be authenticated. Try signing out and signing back into the app. If this error continues, please contact Support.</string>
+    <!--  The course is already upgraded  -->
+    <string name="error_course_already_paid">The course you are looking to upgrade has already been paid for. For additional help, reach out to Support.</string>
+    <!--  Course sku or the payment processor didn't found  -->
+    <string name="error_payment_not_processed">Your payment could not be processed at this time. Please try again. For additional help, reach out to Support.</string>
+    <!--  The native payment is complete but an error occurred while marking the course verified  -->
+    <string name="error_course_not_fullfilled">Something happened when we tried to update your course experience. If this error continues, reach out to Support for help.</string>
+    <!--  The price wasn't fetched from the payment sdk  -->
+    <string name="error_price_not_fetched">Your request could not be completed at this time. If this error continues, please reach out to Support.</string>
 </resources>
