refactor: replace pop-up with snack bar for success use case fix: LEARNER-8754

--- a/OpenEdXMobile/res/values/iap_strings.xml
+++ b/OpenEdXMobile/res/values/iap_strings.xml
@@ -7,10 +7,8 @@
     <!--  Description of Purchases Field  -->
     <string name="description_purchase">Sign into the Play Store to restore access to courses you have previously paid to upgrade</string>
 
-    <!-- Title of Upgrade Complete Alert -->
-    <string name="title_upgrade_complete">Upgrade complete</string>
-    <!-- Message for successful course upgrade -->
-    <string name="upgrade_success_message">Thank you for your purchase. You can pick up right where you left off and enjoy full access to your course content.</string>
+    <!-- Message for successful course purchase -->
+    <string name="purchase_success_message">Thank you for your purchase. Enjoy full access to your course!</string>
 
     <!-- Title of Course Upgrade Error Alert -->
     <string name="title_upgrade_error">Upgrade Error</string>
