--- a/OpenEdXMobile/res/drawable/white_roundedbg.xml
+++ b/OpenEdXMobile/res/drawable/white_roundedbg.xml
@@ -5,7 +5,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@android:color/white" />
+        android:color="@color/grey_text" />
 
     <corners android:radius="5dp" />
 
