--- a/OpenEdXMobile/res/layout/activity_launch.xml
+++ b/OpenEdXMobile/res/layout/activity_launch.xml
@@ -6,58 +6,93 @@
         android:id="@+id/rl_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:background="@drawable/launch_background"
+        android:orientation="vertical"
         android:splitMotionEvents="false">
 
-        <ImageView
-            android:id="@+id/edx_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="60dp"
-            android:contentDescription="@string/phonetic_app_name"
-            android:src="@drawable/launch_screen_logo" />
-
-        <LinearLayout
-            android:id="@+id/bottom_layout"
+        <RelativeLayout
+            android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_above="@id/sign_in_tv"
+            android:importantForAccessibility="no"
+            android:background="@drawable/new_launch_screen">
+
+            <ImageView
+                android:id="@+id/subodha_logo"
+                android:layout_width="207dp"
+                android:layout_height="76dp"
+                android:scaleType="fitCenter"
+                android:layout_marginTop="50dp"
+                android:layout_centerHorizontal="true"
+                android:contentDescription="@string/subodha_learning_for_all"
+                android:src="@mipmap/subodha_logo" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:textSize="18dp"
+                android:layout_marginTop="5dp"
+                android:contentDescription="@string/your_accessible_learning_platform"
+                android:textColor="@color/seach_hint_color"
+                android:layout_below="@+id/subodha_logo"
+                android:text="@string/your_accessible_learning_platform" />
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/sign_in_tv"
+            style="@style/bold_white_text"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="12sp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="35dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="25dp"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:background="@drawable/subodha_launch_bg"
+            android:contentDescription="@string/sign_in_and_learn"
+            android:padding="5dp"
+            android:text="@string/sign_in_caps"
+            android:textColor="@color/grey_text"
+            android:textSize="15dp" />
 
-            <Button
-                android:id="@+id/sign_up_btn"
-                style="@style/bold_white_text"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/edx_brand_button"
-                android:contentDescription="@string/sign_up_and_learn"
-                android:focusable="true"
-                android:padding="5dp"
-                android:text="@string/sign_up_and_learn"
-                android:textColor="@android:color/white"
-                android:textSize="16sp" />
+        <!--     <LinearLayout
+                 android:id="@+id/bottom_layout"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_alignParentBottom="true"
+                 android:layout_marginBottom="35dp"
+                 android:layout_marginLeft="50dp"
+                 android:layout_marginRight="50dp"
+                 android:layout_marginTop="25dp"
+                 android:gravity="center"
+                 android:orientation="vertical">
 
-            <Button
-                android:id="@+id/sign_in_tv"
-                style="@style/bold_text"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/light_selectable_rounded_box_overlay"
-                android:focusable="true"
-                android:gravity="center"
-                android:text="@string/already_have_an_account"
-                android:textColor="@android:color/white"
-                android:textSize="15sp" />
-        </LinearLayout>
+                 <Button
+                     android:id="@+id/sign_up_btn"
+                     style="@style/bold_white_text"
+                     android:layout_width="match_parent"
+                     android:layout_height="50dp"
+                     android:layout_gravity="center_vertical"
+                     android:layout_marginBottom="5dp"
+                     android:background="@drawable/edx_brand_button"
+                     android:contentDescription="@string/sign_up_and_learn"
+                     android:focusable="true"
+                     android:padding="5dp"
+                     android:text="@string/sign_up_and_learn"
+                     android:textColor="@android:color/white"
+                     android:textSize="16sp" />
 
+                 <Button
+                     android:id="@+id/sign_in_tv"
+                     style="@style/bold_text"
+                     android:layout_width="match_parent"
+                     android:layout_height="50dp"
+                     android:layout_marginTop="10dp"
+                     android:background="@drawable/light_selectable_rounded_box_overlay"
+                     android:focusable="true"
+                     android:gravity="center"
+                     android:text="@string/already_have_an_account"
+                     android:textColor="@android:color/white"
+                     android:textSize="15sp" />
+             </LinearLayout>-->
     </RelativeLayout>
 </layout>
