--- a/OpenEdXMobile/res/layout/fragment_my_courses_list.xml
+++ b/OpenEdXMobile/res/layout/fragment_my_courses_list.xml
@@ -1,37 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <FrameLayout
         android:id="@+id/content_error_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/grey_act_background">
+        android:background="@color/white">
 
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:id="@+id/swipe_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <!--      <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                  android:id="@+id/swipe_container"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent">-->
+        <LinearLayout
+            android:id="@+id/liner_hello"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="40dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:orientation="horizontal">
 
-            <ListView
-                android:id="@+id/my_course_list"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/hello"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:divider="@android:color/transparent"
-                android:dividerHeight="@dimen/widget_margin_half"
-                android:paddingTop="@dimen/widget_margin_half"
-                android:paddingBottom="@dimen/widget_margin_half"
-                android:drawSelectorOnTop="false"
-                android:listSelector="@android:color/transparent"
-                tools:listitem="@layout/row_course_list" />
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+                android:text="@string/hello"
+                android:textStyle="normal"
+                android:textColor="@color/grey_text"
+                android:textSize="30dp"/>
+
+            <TextView
+                android:id="@+id/username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30dp"
+                android:layout_marginLeft="5dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/my_course_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:layout_marginTop="100dp"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="@dimen/widget_margin_half"
+            android:paddingTop="@dimen/widget_margin_half"
+            android:paddingBottom="@dimen/widget_margin_half"
+            android:drawSelectorOnTop="false"
+            android:listSelector="@android:color/transparent"
+            tools:listitem="@layout/row_course_list" />
+        <!-- </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
 
         <include
             android:id="@+id/loading_indicator"
             layout="@layout/loading_indicator" />
 
         <include layout="@layout/content_error" />
+
+        <RelativeLayout
+            android:id="@+id/explore_course"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="80dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_centerVertical="true">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                app:cardCornerRadius="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_centerVertical="true">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/no_enrolled_course_card_color"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:textSize="10sp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="100dp"
+                        android:textColor="@color/black"
+                        android:text="@string/welocme_to_your_dashboard"
+                        android:layout_gravity="center_horizontal" />
+
+                    <TextView
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_marginTop="20dp"
+                        android:textColor="@color/black"
+                        android:layout_gravity="center_horizontal|center_vertical|center"
+                        android:textSize="22dp"
+                        android:paddingRight="10dp"
+                        android:paddingLeft="10dp"
+                        android:textStyle="bold"
+                        android:text="@string/you_are_not_enrolled_in_any_programs" />
+
+                    <Button
+                        android:id="@+id/btn_explore_course"
+                        android:layout_width="wrap_content"
+                        android:layout_height="45dp"
+                        android:gravity="center"
+                        android:layout_marginBottom="100dp"
+                        android:paddingLeft="30dp"
+                        android:paddingRight="30dp"
+                        android:textSize="12sp"
+                        android:textColor="@color/black"
+                        android:background="@drawable/profile_language_select"
+                        android:layout_gravity="center_horizontal|center_vertical|center"
+                        android:text="@string/explore_course"
+                        android:textStyle="bold"
+                        android:layout_marginTop="20dp" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </RelativeLayout>
 
     </FrameLayout>
 </layout>
