--- a/OpenEdXMobile/res/menu/my_courses.xml
+++ b/OpenEdXMobile/res/menu/my_courses.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/menu_item_search"
+        android:title="@string/search"
+        android:icon="@drawable/ic_baseline_search_24"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/menu_item_account"
         android:title="@string/title_account"
         app:showAsAction="always" />
