--- a/OpenEdXMobile/res/layout/row_download_list.xml
+++ b/OpenEdXMobile/res/layout/row_download_list.xml
@@ -55,9 +55,9 @@
 
         </LinearLayout>
 
-        <ProgressBar
+        <com.google.android.material.progressindicator.LinearProgressIndicator
             android:id="@+id/progressBar"
-            style="@style/CustomProgressBar"
+            style="@style/custom_horizontal_progress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/widget_margin_half"
