--- a/OpenEdXMobile/res/values/iap_strings.xml
+++ b/OpenEdXMobile/res/values/iap_strings.xml
@@ -11,7 +11,7 @@
     <string name="purchase_success_message">Thank you for your purchase. Enjoy full access to your course!</string>
 
     <!-- Title of Course Upgrade Error Alert -->
-    <string name="title_upgrade_error">Upgrade Error</string>
+    <string name="title_upgrade_error">An error occurred</string>
     <!-- Message for course upgrade error -->
     <string name="general_error_message">It looks like something went wrong when upgrading your course. If this error continues, please contact Support.</string>
     <!-- Email Subject for Course Upgrade Error -->
