feat: make more prominent shimmer load animation in value prop
- Update the shimmer highlight color to light-500(`#E1DDDB`).

fixes: LEARNER-8867

--- a/OpenEdXMobile/res/layout/layout_upgrade_btn.xml
+++ b/OpenEdXMobile/res/layout/layout_upgrade_btn.xml
@@ -10,7 +10,7 @@
         android:layout_gravity="center"
         app:shimmer_base_color="@color/neutralXLight"
         app:shimmer_colored="true"
-        app:shimmer_highlight_color="@color/neutralLight">
+        app:shimmer_highlight_color="@color/neutralBase">
 
         <FrameLayout
             android:layout_width="match_parent"
