chore: Added support for RobotoMono font - Added roboto mono as a secondary font - Update the font of UserProfile screen headings fix: LEARNER-8894

--- a/OpenEdXMobile/res/values/attrs.xml
+++ b/OpenEdXMobile/res/values/attrs.xml
@@ -28,4 +28,5 @@
     <attr name="fontRegular" format="reference" />
     <attr name="fontSemiBold" format="reference" />
     <attr name="fontSemiBoldItalic" format="reference" />
+    <attr name="secondaryFontRegular" format="reference" />
 </resources>
