chore: add SDN prompt shows whenever a user clicks on the upgrade CTA
- Add a prompt after the user taps the Upgrade button that informs the user of their personal data being used to verify SDN.
- Add Analytics for SDN prompt.

fixes: LEARNER-8993

--- a/OpenEdXMobile/res/values/iap_strings.xml
+++ b/OpenEdXMobile/res/values/iap_strings.xml
@@ -52,4 +52,9 @@
     <string name="label_refresh_now">Refresh now</string>
     <!-- Label Continue Without Update -->
     <string name="label_continue_without_update">Continue without update</string>
+
+    <!-- Title of the dialog to verify SDN -->
+    <string name="sdn_dialog_title">Lorem ipsum</string>
+    <!-- Message for the dialog to verify SDN -->
+    <string name="sdn_dialog_message">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
 </resources>
