--- a/OpenEdXMobile/res/values/strings_2.xml
+++ b/OpenEdXMobile/res/values/strings_2.xml
@@ -8,6 +8,6 @@
     <string name="label_leaving_the_app">Leaving the app</string>
     <!-- Dialog Alert Message for Open in browser -->
     <string name="leaving_the_app_message">You are now leaving the {platform_name} app and opening a browser.</string>
-    <!-- Toggle to allow downloads using cellular data -->
+    <!-- Alert dialog accept button label -->
     <string name="label_accept">Accept</string>
 </resources>
