--- a/OpenEdXMobile/res/layout/fragment_discussion_topics.xml
+++ b/OpenEdXMobile/res/layout/fragment_discussion_topics.xml
@@ -26,6 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white"
+                android:nestedScrollingEnabled="true"
                 tools:listitem="@layout/row_discussion_topic" />
 
         </LinearLayout>
